[package]
name = "simple-blog-generator"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
pulldown-cmark = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12.0"
